--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "koa-router": "^7.1.1",
     "koa-static": "^3.0.0",
     "koa-views": "^5.2.1",
+    "preload-js": "^0.6.3",
     "pug": "^2.0.0-rc.1"
   },
   "devDependencies": {
@@ -26,6 +27,10 @@
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.4.0",
+    "html-webpack-plugin": "^2.28.0",
+    "koa-convert": "^1.2.0",
+    "koa-webpack-dev-middleware": "^1.4.6",
+    "koa-webpack-hot-middleware": "^1.0.3",
     "nodemon": "^1.8.1",
     "webpack": "^2.5.1"
   }
