--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.4.0",
+    "gsap": "^1.19.1",
     "html-webpack-plugin": "^2.28.0",
     "koa-convert": "^1.2.0",
     "koa-webpack-dev-middleware": "^1.4.6",
