finish the game !

--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.4.0",
+    "css-loader": "^0.28.4",
     "gsap": "^1.19.1",
+    "gulp": "^3.9.1",
+    "gulp-clean-css": "^3.6.0",
+    "gulp-jsonminify": "^1.0.0",
     "html-webpack-plugin": "^2.28.0",
     "koa-convert": "^1.2.0",
     "koa-webpack-dev-middleware": "^1.4.6",
