--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.4.0",
     "css-loader": "^0.28.4",
+    "event-emitter": "^0.3.5",
     "gsap": "^1.19.1",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.6.0",
@@ -39,6 +40,7 @@
     "nipplejs": "^0.6.7",
     "nodemon": "^1.8.1",
     "socket.io": "^2.0.3",
+    "three": "^0.86.0",
     "webpack": "^2.5.1"
   }
 }
